--- a/Assets/1 Objects/Customer/Customer.asmdef
+++ b/Assets/1 Objects/Customer/Customer.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:d03f8ecae5df608459adcf9df314f56b",
-        "GUID:5423d83bbd2df5347827f415225555c4"
+        "GUID:5423d83bbd2df5347827f415225555c4",
+        "GUID:7fb27e5a416730a49b4d41bc9c552394"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
